mido: Pin HOME application
Test: adb shell dumpsys pinner after boot
Bug: 111132016
Bug: 78585335
Change-Id: I4ed0587ae5348bbe03ad9ac5f1c5b1726dbb8246

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -307,4 +307,7 @@
 
     <!-- Should the pinner service pin the Camera application? -->
     <bool name="config_pinnerCameraApp">true</bool>
+
+    <!-- Should the pinner service pin the Home application? -->
+    <bool name="config_pinnerHomeApp">true</bool>
 </resources>
