mido: overlay: Disable window rounded corner animations
For graphics performance reasons

Bug: 122347746
Test: visual; swipe up on overview
Change-Id: Iadc765aa72e2777f5307659a6138e9dcef1a9659

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -520,4 +520,7 @@
     <string-array name="config_biometric_sensors" translatable="false" >
         <item>0:2:15</item> <!-- ID0:Fingerprint:Strong -->
     </string-array>
+
+    <!-- Disable rounded corners on windows to improve graphics performance -->
+    <bool name="config_supportsRoundedCornersOnWindows">false</bool>
 </resources>
