--- a/rro_overlays/TetheringOverlay/res/values/config.xml
+++ b/rro_overlays/TetheringOverlay/res/values/config.xml
@@ -29,7 +29,7 @@
          Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
          should be empty.  An example would be "softap.*" -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"wlan0"</item>
+        <item>"wlan\\d"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
