mido: Drop support for folio cases
Revert "mido: Initial FlipFlap support"

This reverts commit 6a9d79ad50ff2c550281f55e4e902067e81694c6.

Revert "mido: folio_daemon: Add system_file_type in sepolicy"

This reverts commit e0dbea91267360bce87646dcb937c7023d945ccf.

Revert "mido: Move folio_daemon to system in sepolicy"

This reverts commit baead1c7ff1d9308dcf0fc8b8250932a3ab3ba40.

Revert "mido: Add folio_daemon in sepolicy"

This reverts commit 011d315d3131ea336fb0d02d554b7a060207087d.

Revert "mido: folio_daemon: switch to blueprint"

This reverts commit 28eb596ffda528886675f0759bf0fea9b5519f7e.

Revert "mido: remove LOCAL_CLANG := true for folio_daemon"

This reverts commit d8bb29a7da95d140c24f9fbfbf89074edf969258.

Revert "mido: Use -Werror in folio_daemon"

This reverts commit 7c5792bcb3976ea4412279fa31ab65a54d0b1127.

Revert "mido: folio_daemon: Add missing includes."

This reverts commit 29f12e8774c9095d85540ab9ee2a3738ba222bf7.

Revert "mido: folio_daemon: retry slowly on failure"

This reverts commit 3694f2382c67eb61b1a72cc140616fc2bed04a83.

Revert "mido: folio_daemon: exit when poll returns zero events"

This reverts commit 9e49cd5cfd93c4047465f4866587e393f3bea516.

Revert "mido: folio_daemon: improve logging for debugging"

This reverts commit c6e8245ef20b706c9fda0c705a4fe3753706f88c.

Revert "mido: Add support for folio cases"

This reverts commit b4120a5e35375831557c940365b9b5111e7c465f.

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -324,6 +324,11 @@
     <!-- reference volume index for music stream to limit headphone volume and display warning -->
     <integer name="config_safe_media_volume_index">8</integer>
 
+    <!-- Indicate whether closing the lid causes the device to go to sleep and opening
+         it causes the device to wake up.
+         The default is false. -->
+    <bool name="config_lidControlsSleep">true</bool>
+
     <!-- Indicate whether to allow the device to suspend when the screen is off
          due to the proximity sensor.  This resource should only be set to true
          if the sensor HAL correctly handles the proximity sensor as a wake-up source.
